# ros2_learn_by_doing_plan_navigation

./: .gitignore  README.md  build.sh  pyrightconfig.json  requirements.txt
hardware_setup/: 90-bumperbot.rules  udevadm_reload.sh
src/bumperbot_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml  joy_teleop.yaml  twist_mux_topics.yaml
src/bumperbot_controller/src/: noisy_controller.cpp  simple_controller.cpp
src/bumperbot_cpp_examples/: CMakeLists.txt
src/bumperbot_firmware/: CMakeLists.txt
src/bumperbot_firmware/firmware/robot_control/: robot_control.ino
src/bumperbot_firmware/src/: bumperbot_interface.cpp
src/bumperbot_firmware_v2/: CMakeLists.txt  package.xml
src/bumperbot_firmware_v2/firmware/: firmware.ino
src/bumperbot_firmware_v2/include/bumperbot_firmware_v2/: robot_controller.hpp
src/bumperbot_firmware_v2/launch/: robot_controller.launch.py
src/bumperbot_firmware_v2/src/: robot_controller.cpp  robot_driver_node.cpp
src/bumperbot_lidar/: CMakeLists.txt  package.xml
src/bumperbot_localization/config/: odometry_motion_model.rviz
src/bumperbot_localization/rviz/: global_localization.rviz
src/bumperbot_motion/: CMakeLists.txt  motion_planner_plugins.xml  package.xml
src/bumperbot_motion/include/bumperbot_motion/: pd_motion_planner.hpp  pure_pursuit.hpp
src/bumperbot_motion/src/: pd_motion_planner.cpp  pure_pursuit.cpp
src/bumperbot_navigation/: CMakeLists.txt  package.xml
src/bumperbot_navigation/behavior_tree/: simple_navigation.xml  simple_navigation_with_replanning.xml  simple_navigation_with_replanning_and_recovery.xml
src/bumperbot_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  costmap.yaml  planner_server.yaml  smoother_server.yaml
src/bumperbot_navigation/launch/: navigation.launch.py
src/bumperbot_navigation/rviz/: nav2_default_view.rviz
src/bumperbot_planning/: CMakeLists.txt  global_planner_plugins.xml  package.xml
src/bumperbot_planning/bumperbot_planning/: dijkstra_planner.py
src/bumperbot_planning/include/bumperbot_planning/: a_star_planner.hpp  dijkstra_planner.hpp
src/bumperbot_planning/src/: a_star_planner.cpp  dijkstra_planner.cpp
